--- a/app/src/main/res/layout/activity_admin_r1.xml
+++ b/app/src/main/res/layout/activity_admin_r1.xml
@@ -4,10 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AdminActivity">
+    tools:context=".R1_R2.AdminMainActivity">
 
     <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/appBarLayout"
+        android:id="@+id/admin_r1_appBarLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/md_theme_light_surfaceVariant"
@@ -17,7 +17,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <com.google.android.material.appbar.MaterialToolbar
-            android:id="@+id/topAppBar"
+            android:id="@+id/admin_r1_topAppBar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             app:navigationIcon="@drawable/baseline_arrow_back_24"
@@ -27,18 +27,18 @@
     </com.google.android.material.appbar.AppBarLayout>
 
     <ImageView
-        android:id="@+id/business_icon"
+        android:id="@+id/admin_r1_imageview_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="12dp"
         android:src="@drawable/baseline_business_24"
         android:importantForAccessibility="no"
-        app:layout_constraintBottom_toBottomOf="@+id/appBarLayout"
-        app:layout_constraintEnd_toEndOf="@+id/appBarLayout"
-        app:layout_constraintTop_toTopOf="@+id/appBarLayout" />
+        app:layout_constraintBottom_toBottomOf="@+id/admin_r1_appBarLayout"
+        app:layout_constraintEnd_toEndOf="@+id/admin_r1_appBarLayout"
+        app:layout_constraintTop_toTopOf="@+id/admin_r1_appBarLayout" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/admin_r1_button"
         style="@style/Widget.Material3.Button.IconButton.Filled"
         android:layout_width="148dp"
         android:layout_height="65dp"
@@ -48,11 +48,11 @@
         android:onClick="addPhysio"
         android:text="@string/add_button"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        app:layout_constraintEnd_toEndOf="@+id/constraintLayout2"
-        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />
+        app:layout_constraintEnd_toEndOf="@+id/admin_r1_constraintLayout_fields"
+        app:layout_constraintTop_toBottomOf="@+id/admin_r1_constraintLayout_fields" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/constraintLayout2"
+        android:id="@+id/admin_r1_constraintLayout_fields"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
@@ -61,10 +61,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">
+        app:layout_constraintTop_toBottomOf="@+id/admin_r1_appBarLayout">
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/physio_name"
+            android:id="@+id/admin_r1_textInputLayout_name"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -79,7 +79,7 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/physio_ssn"
+            android:id="@+id/admin_r1_textInputLayout_ssn"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -93,7 +93,7 @@
             app:errorIconDrawable="@null"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/physio_name" >
+            app:layout_constraintTop_toBottomOf="@+id/admin_r1_textInputLayout_name" >
 
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
@@ -103,7 +103,7 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/physio_email"
+            android:id="@+id/admin_r1_textInputLayout_email"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -111,7 +111,7 @@
             android:hint="@string/email_address"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/physio_name">
+            app:layout_constraintTop_toBottomOf="@+id/admin_r1_textInputLayout_name">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
@@ -119,14 +119,14 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/physio_street"
+            android:id="@+id/admin_r1_textInputLayout_street"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="22dp"
             android:hint="@string/street"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/physio_email">
+            app:layout_constraintTop_toBottomOf="@+id/admin_r1_textInputLayout_email">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="200dp"
@@ -134,14 +134,14 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/physio_stnumber"
+            android:id="@+id/admin_r1_textInputLayout_stNumber"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="115dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="22dp"
             android:hint="@string/stnumber"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/physio_email">
+            app:layout_constraintTop_toBottomOf="@+id/admin_r1_textInputLayout_email">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
@@ -150,14 +150,14 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/physio_city"
+            android:id="@+id/admin_r1_textInputLayout_city"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="22dp"
             android:hint="@string/city"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/physio_street">
+            app:layout_constraintTop_toBottomOf="@+id/admin_r1_textInputLayout_street">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="200dp"
@@ -165,7 +165,7 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/physio_zip"
+            android:id="@+id/admin_r1_textInputLayout_zip"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="115dp"
             android:layout_height="wrap_content"
@@ -174,7 +174,7 @@
             app:counterEnabled="true"
             app:counterMaxLength="5"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/physio_stnumber">
+            app:layout_constraintTop_toBottomOf="@+id/admin_r1_textInputLayout_stNumber">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
@@ -184,7 +184,7 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/physio_country"
+            android:id="@+id/admin_r1_textInputLayout_country"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -192,7 +192,7 @@
             android:enabled="false"
             android:hint="@string/country"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/physio_city">
+            app:layout_constraintTop_toBottomOf="@+id/admin_r1_textInputLayout_city">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="200dp"
@@ -202,14 +202,15 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <TextView
-            android:id="@+id/form_clear"
+            android:id="@+id/admin_r1_textview_clear_form"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
             android:layout_marginTop="10dp"
             android:onClick="clearForm"
             android:text="@string/clear_form"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/physio_country" />
+            app:layout_constraintTop_toBottomOf="@+id/admin_r1_textInputLayout_country" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
