--- a/app/src/main/res/menu/admin_bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/admin_bottom_navigation_menu.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:id="@+id/page1"
+    <item android:id="@+id/AdminPage1"
         android:enabled="true"
         android:icon="@drawable/baseline_business_24"
         android:title="Φυσιοθεραπευτήρια">
     </item>
 
-    <item android:id="@+id/page2"
+    <item android:id="@+id/AdminPage2"
         android:enabled="true"
         android:icon="@drawable/baseline_medical_services_24"
         android:title="Παροχές">
