--- a/app/src/main/res/layout/activity_physician_r4.xml
+++ b/app/src/main/res/layout/activity_physician_r4.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".R4.PhysicianR4Activity">
+    tools:context=".R3_R8.PhysicianR4Activity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/physician_r4_appBarLayout"
@@ -91,7 +91,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="18dp"
             android:clickable="false"
-            android:hint="@string/physician_amka"
+            android:hint="@string/physician_AMKA"
             app:counterEnabled="true"
             app:counterMaxLength="9"
             app:endIconCheckable="false"
@@ -131,7 +131,7 @@
             android:layout_width="115dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="14dp"
-            android:hint="@string/stnumber"
+            android:hint="@string/stNumber"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/physician_r4_textInputLayout_amka">
 
@@ -164,7 +164,7 @@
             android:layout_width="115dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="18dp"
-            android:hint="@string/zip_no"
+            android:hint="@string/zipNo"
             app:counterEnabled="true"
             app:counterMaxLength="5"
             app:layout_constraintEnd_toEndOf="parent"
