--- a/app/src/main/res/layout/layout_physician_r4_bottom_sheet.xml
+++ b/app/src/main/res/layout/layout_physician_r4_bottom_sheet.xml
@@ -3,7 +3,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/hostory_dialog">
+    android:background="@drawable/history_dialog">
 
     <ImageView
         android:layout_marginLeft="110dp"
