--- a/app/src/main/res/layout/fragment_admin1.xml
+++ b/app/src/main/res/layout/fragment_admin1.xml
@@ -15,12 +15,12 @@
             android:layout_width="324dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="30dp"
-            android:layout_marginBottom="72dp"
+            android:layout_marginBottom="30dp"
             android:backgroundTint="@color/md_theme_light_surfaceVariant"
             android:clickable="true"
             android:src="@drawable/baseline_add_24"
-            android:contentDescription="@null"
-        app:layout_constraintBottom_toBottomOf="parent"
+            android:contentDescription="@string/admin_addButton"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
         <Button
@@ -28,7 +28,7 @@
             style="@style/Widget.MaterialComponents.Button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="72dp"
+            android:layout_marginTop="20dp"
             android:text="@string/admin_viewUserData"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
