--- a/app/src/main/res/layout/fragment_physician2.xml
+++ b/app/src/main/res/layout/fragment_physician2.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".R1_R2.AdminFragment2">
+    tools:context=".R3_R8.PhysicianFragment2R6">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
