--- a/app/src/main/res/menu/bottom_navigation_menu_main.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu_main.xml
@@ -3,18 +3,18 @@
     <item android:id="@+id/MainPage1"
         android:enabled="true"
         android:icon="@drawable/baseline_admin_panel_settings_24"
-        android:title="Χρήστης ΠΣΦ">
+        android:title="@string/menu_main_1admin">
     </item>
 
     <item android:id="@+id/MainPage2"
         android:enabled="true"
         android:icon="@drawable/baseline_business_24"
-        android:title="Φυσιοθεραπευτήριο">
+        android:title="@string/menu_main_2physician">
     </item>
 
     <item android:id="@+id/MainPage3"
         android:enabled="true"
         android:icon="@drawable/baseline_account_circle_24"
-        android:title="Ασθενής">
+        android:title="@string/menu_main_3patient">
     </item>
 </menu>
