--- a/app/src/main/res/layout/activity_appointments_information_user.xml
+++ b/app/src/main/res/layout/activity_appointments_information_user.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".R9_R10.UserFragment1R9">
-
-    <!--this fragment is the information the user receives on his appointments, right?-->
+    tools:context=".R9_R10.UserAppointmentsInfoActivityR9">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -32,6 +30,7 @@
                 app:titleCentered="true" />
 
         </com.google.android.material.appbar.AppBarLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
         <TextView
             android:id="@+id/textView_physio"
@@ -137,5 +136,6 @@
 
 
 
+
+
     </androidx.constraintlayout.widget.ConstraintLayout>
-</FrameLayout>
