--- a/app/src/main/res/layout/activity_admin_r2.xml
+++ b/app/src/main/res/layout/activity_admin_r2.xml
@@ -20,104 +20,109 @@
             android:id="@+id/admin_r2_topAppBar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
+            app:menu="@menu/admin_r2_app_bar_layout"
             app:navigationIcon="@drawable/baseline_arrow_back_24"
             app:title="Νέα Παροχή"
             app:titleCentered="true" />
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/name"
-        android:layout_width="382dp"
-        android:layout_height="56dp"
-        android:layout_marginTop="20dp"
-        android:hint="@string/name_service"
-        app:boxBackgroundColor="@color/white"
-        app:boxBackgroundMode="outline"
+    <Button
+        android:id="@+id/admin_r2_button"
+        style="@style/Widget.Material3.Button.IconButton.Filled"
+        android:layout_width="148dp"
+        android:layout_height="65dp"
+        android:layout_marginBottom="51dp"
+        android:drawableLeft="@drawable/baseline_check_24"
+        android:enabled="false"
+        android:text="@string/admin_addButton"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/admin_r2_constraintLayout_fields" />
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/admin_r2_constraintLayout_fields"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="35dp"
+        android:layout_marginEnd="24dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/admin_r2_appBarLayout">
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/nametext"
-            android:layout_width="match_parent"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/admin_r2_textInputLayout_name"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:inputType="text" />
-    </com.google.android.material.textfield.TextInputLayout>
+            android:hint="@string/admin_service"
+            app:boxBackgroundMode="outline"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/code"
-        android:layout_width="382dp"
-        android:layout_height="53dp"
-        android:layout_marginTop="22dp"
-        android:background="@color/white"
-        android:hint="@string/code_service"
-        app:boxBackgroundColor="@color/white"
-        app:boxBackgroundMode="outline"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/name">
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/admin_r2_textInputLayout_name_editText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="text" />
+        </com.google.android.material.textfield.TextInputLayout>
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/codetext"
-            android:layout_width="match_parent"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/admin_r2_textInputLayout_code"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:inputType="text" />
-    </com.google.android.material.textfield.TextInputLayout>
+            android:layout_marginTop="22dp"
+            android:hint="@string/admin_serviceCode"
+            app:boxBackgroundMode="outline"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/admin_r2_textInputLayout_name">
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/cost"
-        android:layout_width="376dp"
-        android:layout_height="53dp"
-        android:layout_marginTop="22dp"
-        android:hint="@string/cost_service"
-        app:boxBackgroundColor="@color/white"
-        app:boxBackgroundMode="outline"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/code">
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/admin_r2_textInputLayout_code_editText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="text" />
+        </com.google.android.material.textfield.TextInputLayout>
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/costtext"
-            android:layout_width="match_parent"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/admin_r2_textInputLayout_cost"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:inputType="number" />
-    </com.google.android.material.textfield.TextInputLayout>
+            android:layout_marginTop="22dp"
+            android:hint="@string/admin_serviceCost"
+            app:boxBackgroundMode="outline"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/admin_r2_textInputLayout_code">
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/description"
-        android:layout_width="379dp"
-        android:layout_height="57dp"
-        android:layout_marginTop="22dp"
-        android:hint="@string/description_service"
-        app:boxBackgroundColor="@color/white"
-        app:boxBackgroundMode="outline"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cost">
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/admin_r2_textInputLayout_cost_editText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="number" />
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/descriptiontext"
-            android:layout_width="match_parent"
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/admin_r2_textInputLayout_description"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:inputType="text" />
-    </com.google.android.material.textfield.TextInputLayout>
+            android:layout_marginTop="22dp"
+            android:hint="@string/admin_serviceDescription"
+            app:boxBackgroundMode="outline"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/admin_r2_textInputLayout_cost">
 
-    <Button
-        android:id="@+id/addbtn"
-        style="@style/Widget.Material3.Button.IconButton.Filled"
-        android:layout_marginStart="170dp"
-        android:layout_marginBottom="24dp"
-        android:layout_width="148dp"
-        android:layout_height="65dp"
-        android:layout_marginTop="35dp"
-        android:drawableLeft="@drawable/baseline_check_24"
-        android:text="@string/admin_addButton"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:enabled="false"
-        />
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/admin_r2_textInputLayout_description_editText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="text" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
