--- a/app/src/main/res/layout/fragment_physician2.xml
+++ b/app/src/main/res/layout/fragment_physician2.xml
@@ -10,22 +10,17 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <ImageButton
-            android:id="@+id/imagebuttonview_calendar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="20dp"
-            android:src="@drawable/baseline_calendar_today_24"
-            app:layout_constraintBottom_toBottomOf="@+id/calendarBtn"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/calendarBtn" />
-
         <com.google.android.material.textfield.TextInputLayout
 
             android:id="@+id/calendarBtn"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="32dp"
+            android:layout_marginEnd="24dp"
+            app:endIconDrawable="@drawable/baseline_calendar_today_24"
+            app:endIconMode="custom"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
