--- a/app/src/main/res/layout/fragment_user1.xml
+++ b/app/src/main/res/layout/fragment_user1.xml
@@ -89,10 +89,11 @@
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="340dp"
             android:layout_height="60dp"
-            android:layout_marginStart="40dp"
+            android:layout_marginStart="20dp"
             android:layout_marginEnd="40dp"
             android:layout_marginTop="250dp"
             android:hint="@string/textView_physio"
+            android:textAlignment="textStart"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -111,10 +112,10 @@
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/textInputLayout_date"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            android:layout_width="210dp"
+            android:layout_width="230dp"
             android:layout_height="60dp"
             android:layout_marginTop="50dp"
-            android:layout_marginStart="40dp"
+            android:layout_marginStart="20dp"
             app:endIconDrawable="@drawable/baseline_calendar_month_24"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textInputLayout_physio"
@@ -157,16 +158,16 @@
             android:id="@+id/textView_clear"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="40dp"
+            android:layout_marginStart="20dp"
             android:layout_marginEnd="190dp"
             android:text="@string/textView_clear"
             android:textSize="15sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintHorizontal_bias="0.092"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textInputLayout_date"
-            app:layout_constraintVertical_bias="0.14" />
+            app:layout_constraintVertical_bias="0.082" />
 
         <Button
             android:id="@+id/button"
